Upgrade gradle and dependencies + include older changes